# Motor.Telemetry.Api

public/PiSubmarine/Motor/Telemetry/Api/: Faults.h  IProvider.h  OperationalState.h  State.h  Warnings.h
src/: CMakeLists.txt
test/: CMakeLists.txt
test/PiSubmarine/Motor/Telemetry/Api/: IProviderTest.cpp
